--- a/portafolio.html
+++ b/portafolio.html
@@ -34,7 +34,7 @@
                     <img src="./imagenes/burger.png" alt="">
                 </div>
                 <div class="texto" >
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos libero facere perferendis necessitatibus sequi sapiente consequatur incidunt modi molestiae inventore.</p>
+                    <p>Burger Chopps, Hamburgueseria y Cerveza artesanal</p>
                 </div>
             </li>
             <li>
@@ -42,7 +42,7 @@
                     <img src="./imagenes/git.png" alt="">
                 </div>
                 <div >
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos libero facere perferendis necessitatibus sequi sapiente consequatur incidunt modi molestiae inventore.</p>
+                    <p>Github, seccion en construccion...</p>
                 </div>
             </li>
            
