--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="presentacion">
             <h1>
                 <span class="txtespecial">hola,<br> SOY YOUNG WOANG <br> DISEÑADOR WEB  </span>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos libero facere perferendis necessitatibus sequi sapiente consequatur incidunt modi molestiae inventore.</p>
+                <p>Apasionado por la tecnologia</p><p>Conocimientos en HTML, CSS, Javascript , Java, Ensamblador</p>
                 
             </h1>
         </div>
