--- a/contactame.html
+++ b/contactame.html
@@ -15,6 +15,7 @@
                 <ul class="links">
                     <li><a href="index.html">INICIO</a></li>
                     <li><a href="portafolio.html">PORTAFOLIO</a></li>
+                    <li><a href="sobremi.html">SOBRE MI</a></li>
                     <li><a href="contactame.html" class="selected">CONTACTAME</a></li>
                 </ul>
             </nav>
