--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Portafolio</title>
     <link rel="stylesheet" href="./css/estilo1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link rel="shortcut icon" href="menu-icon-19342-Windows.ico">
 </head>
 <body>
     <header>
@@ -15,6 +16,7 @@
                 <ul class="links">
                     <li><a href="index.html" class="selected">INICIO</a></li>
                     <li><a href="portafolio.html">PORTAFOLIO</a></li>
+                    <li><a href="sobremi.html">SOBRE MI</a></li>
                     <li><a href="contactame.html">CONTACTAME</a></li>
                 </ul>
             </nav>
@@ -30,7 +32,7 @@
     <section class="inicio">
         <div class="presentacion">
             <h1>
-                <span class="txtespecial">hola,<br> SOY YOUNG WOANG <br> DISEÑADOR WEB  </span>
+                <span class="txtespecial">hola,<br> SOY YOUNG WOANG <br> ESTUDIANTE </span>
                 <p>Apasionado por la tecnologia</p><p>Conocimientos en HTML, CSS, Javascript , Java, Ensamblador</p>
                 
             </h1>
