--- a/sobremi.html
+++ b/sobremi.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio</title>
-    <link rel="stylesheet" href="./css/estilop.css">
+    <link rel="stylesheet" href="./css/estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <body>
@@ -14,8 +14,8 @@
             <nav>
                 <ul class="links">
                     <li><a href="index.html">INICIO</a></li>
-                    <li><a href="portafolio.html" class="selected">PORTAFOLIO</a></li>
-                    <li><a href="sobremi.html">SOBRE MI</a></li>
+                    <li><a href="portafolio.html">PORTAFOLIO</a></li>
+                    <li><a href="sobremi.html" class="selected">SOBRE MI</a></li>
                     <li><a href="contactame.html">CONTACTAME</a></li>
                 </ul>
             </nav>
@@ -31,11 +31,27 @@
     <section class="contenidoporta">
         <ul class="links">
             <li>
+                <div class="foto" >
+                    <img src="./imagenes/burger.png" alt="">
+                </div>
+                <div class="texto" >
+                    <p>Burger Chopps, Hamburgueseria y Cerveza artesanal</p>
+                </div>
+            </li>
+            <li>
                 <div>
-                    <img src="./imagenes/git.png" alt="">
+                    <img src="./imagenes/skate.png" alt="">
                 </div>
                 <div >
-                    <p>Github, seccion en construccion...</p>
+                    <p>El skate y caminar, una forma de desconectar tus pensamientos y fluir</p>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <img src="./imagenes/dibujo.png" alt="">
+                </div>
+                <div >
+                    <p>Dibujo, pasatiempo guiado por el arte efimero</p>
                 </div>
             </li>
            
